fix java.net.URL is deprecated